tests/paczka1/fuzzy1/90176331.err
Error in line 12: HFR S666 294,84
Error in line 13: S701 A216 77,3
Error in line 11: vAA8Fzvua A71 80,6
Error in line 10: HFR S666 86,6
Error in line 33: KCs3bC2pB S666 82,5
Error in line 34: 89MnO5foQnY S701 98,7
Error in line 35: KCs3bC2pB A71 38,1
Error in line 37: KCs3bC2pB A216 9,3
